[package]
name = "fortress"
version = "0.1.0"
edition = "2024"
description = "A simple password manager CLI application"
authors = ["Blaxxmith", "Axxiar"]
repository = "github.com/xavier2p/fortress"
readme = "README.md"

[[bin]]
name = "frtrs"
path = "src/main.rs"

[dependencies]
rand = "0.10.0-rc.0"
serde = { version = "1.0.226", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
rpassword = "7.4.0"
argon2 = "0.6.0-rc.1"
regex = "1.11.2"
cli-clipboard = "0.4.0"
aes-gcm = "0.11.0-rc.1"